Header alignment and final fixes wk 4

--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -6,7 +6,8 @@
     --section-background: #05204A;
     --main-text: #FFFFFF;
     --secondary-text: #FFD449;
-    --accent-text: #54982C;
+    --accent: #54982C;
+    --accent-text: #9C9C9C;
 
     --main-headings: 'ABeeZee', sans-serif;
     --secondary-headings: 'Lobster', cursive;
@@ -18,6 +19,8 @@ html, body {
 
 body {
     background-color: var(--main-background);
+    color: white;
+    font-family: var(--main-text);
 }
 
 /* Header*/
@@ -38,7 +41,7 @@ header {
 #main-title {
     font-family: var(--main-headings);
     font-size: 2em;
-    color: var(--accent-text);
+    color: var(--accent);
     grid-column: 4/8;
     grid-row: 1/2;
     text-align: center;
@@ -47,11 +50,11 @@ header {
 #subtitle {
     font-family: var(--main-headings);
     font-size: 1em;
-    color: var(--accent-text);
+    color: var(--accent);
     grid-column: 4/8;
     grid-row: 2/3;
     text-align: center;
-    margin: 0 .5em 1em 0;
+    margin: 0 0 1em 0;
 }
 #social {
     grid-column: 8/10;
@@ -74,15 +77,25 @@ header {
     grid-column: 10/11;
     grid-row: 1/3;
 }
-
+#main-nav.open {
+    grid-column: 1/3;
+    grid-row: 3/4;
+}
+#main-nav a {
+    color: var(--accent-text);
+}
 #header-date {
     text-align: center;
     width: 100%;
     padding: .75em;
     margin-bottom: -1em;
-    background-color: var(--accent-text);;
+    font-family: var(--main-text);
+    font-weight: bold;
+    color: var(--secondary-background);
+    background-color: var(--accent);
     grid-column: 1/11;
 }
+
 
 /*Navigation*/
 nav {
@@ -130,6 +143,7 @@ main {
 #hero, #event, #weather, #news, #spotlight, #join {
     border: 2px solid rgba(0,0,0,0.3);
     padding: 5em;
+    background-color: var(--section-background);
 }
 
 #spotlight {
@@ -157,6 +171,10 @@ main {
 footer {
     text-align: center;
     margin-bottom: 2em;
+    color: black;
+}
+footer a {
+    text-decoration: none;
 }
 #footer-title {
     font-family: var(--main-headings);
@@ -173,4 +191,10 @@ footer {
 }
 #line3 {
     display: none;
+}
+@media only screen and (max-width: 460px)
+{
+    #main-title {
+        font-size: 1.5em;
+    }
 }
