--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -1,6 +1,7 @@
 @media only screen and (min-width:64rem){
     #main-nav {
-        grid-column: 2/4;
+        grid-column: 1/11;
+        grid-row: 3/4;
     }
     nav ul {
         display: flex; 
